dynamix/force-app/main/default/objects/Booking__c/fields/Aadhar__c.field-meta.xml
<CustomField>
    <fullName>Aadhar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aadhar</label>
    <type>Checkbox</type>
</CustomField>