dynamix/force-app/main/default/objects/Booking__c/fields/Accountable_Charges__c.field-meta.xml
<CustomField>
    <fullName>Accountable_Charges__c</fullName>
    <inlineHelpText>Without GST</inlineHelpText>
    <label>Accountable Charges</label>
    <summarizedField>Price_Details__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Price_Details__c.Accountable_Charges_Checkbox__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Price_Details__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>