dynamix/force-app/main/default/objects/Booking__c/fields/Active_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Active_Milestones__c</fullName>
    <label>Active Milestones %</label>
    <summarizedField>Payment_Milestones__c.Milestone_age__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Milestones__c.Milestone_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Milestones__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>