dynamix/force-app/main/default/objects/Booking__c/fields/Add_Broker_Additional_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Add_Broker_Additional_Benefit__c</fullName>
    <label>Add Broker Additional Benefit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>