dynamix/force-app/main/default/objects/Booking__c/fields/Additional_Car_Parking__c.field-meta.xml
<CustomField>
    <fullName>Additional_Car_Parking__c</fullName>
    <label>Additional Car Parking</label>
    <summarizedField>Price_Details__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Price_Details__c.Additional_Car_Bike_Parking__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Price_Details__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>