dynamix/force-app/main/default/objects/Booking__c/fields/Agreement_Sent_to_Agent_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Sent_to_Agent_Date__c</fullName>
    <label>Agreement Sent to Agent Date</label>
    <type>Date</type>
</CustomField>