dynamix/force-app/main/default/objects/Booking__c/fields/Agreement_Shared_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Shared_Date__c</fullName>
    <label>Agreement Shared Date</label>
    <type>DateTime</type>
</CustomField>