dynamix/force-app/main/default/objects/Booking__c/fields/Agreement_Value_incl_GST__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_incl_GST__c</fullName>
    <formula>Agreement_Value__c + GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Value (incl GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>