dynamix/force-app/main/default/objects/Booking__c/fields/Agreement_Value_Pending__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_Pending__c</fullName>
    <formula>Agreement_Value__c - Payment_Received_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Value (Pending)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>