dynamix/force-app/main/default/objects/Booking__c/fields/Agreemnt_Non_Critical__c.field-meta.xml
<CustomField>
    <fullName>Agreemnt_Non_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreemnt (Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>