dynamix/force-app/main/default/objects/Booking__c/fields/Allotment_Letter_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Allotment_Letter_Generation_Date__c</fullName>
    <label>Allotment Letter Generation Date</label>
    <type>DateTime</type>
</CustomField>