dynamix/force-app/main/default/objects/Booking__c/fields/Allotment_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Allotment_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allotment Letter Sent</label>
    <type>Checkbox</type>
</CustomField>