dynamix/force-app/main/default/objects/Booking__c/fields/Amount_Non_Critical__c.field-meta.xml
<CustomField>
    <fullName>Amount_Non_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amount (Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>