dynamix/force-app/main/default/objects/Booking__c/fields/Amount_of_First_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_First_Disbursement__c</fullName>
    <label>Amount of First Disbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>