dynamix/force-app/main/default/objects/Booking__c/fields/Approved_Payment_Received_GST__c.field-meta.xml
<CustomField>
    <fullName>Approved_Payment_Received_GST__c</fullName>
    <inlineHelpText>GST Received (Against Milestone)</inlineHelpText>
    <label>Approved Payment Received (GST)</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Payment_Category__c</field>
        <operation>equals</operation>
        <value>GST</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>