dynamix/force-app/main/default/objects/Booking__c/fields/Bank_Approved_NOC__c.field-meta.xml
<CustomField>
    <fullName>Bank_Approved_NOC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Approved NOC</label>
    <type>Checkbox</type>
</CustomField>