dynamix/force-app/main/default/objects/Booking__c/fields/Bank_Approved_ROC__c.field-meta.xml
<CustomField>
    <fullName>Bank_Approved_ROC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Approved ROC</label>
    <type>Checkbox</type>
</CustomField>