dynamix/force-app/main/default/objects/Booking__c/fields/Bank_KIT_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_KIT_Handover_Date__c</fullName>
    <label>Bank KIT Handover Date</label>
    <type>Date</type>
</CustomField>