dynamix/force-app/main/default/objects/Booking__c/fields/Bank_Name_Non_Critical__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_Non_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Name (Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>