dynamix/force-app/main/default/objects/Booking__c/fields/Blank_Field__c.field-meta.xml
<CustomField>
    <fullName>Blank_Field__c</fullName>
    <label>Blank Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>