dynamix/force-app/main/default/objects/Booking__c/fields/Booking_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Booking_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Cancellation</label>
    <type>Checkbox</type>
</CustomField>