dynamix/force-app/main/default/objects/Booking__c/fields/Booking_Form_OTP__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form_OTP__c</fullName>
    <label>Booking Form OTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>