dynamix/force-app/main/default/objects/Booking__c/fields/Booking_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Booking_Owner_Email__c</fullName>
    <formula>Owner:User.Email</formula>
    <label>Booking Owner Email</label>
    <type>Text</type>
</CustomField>