dynamix/force-app/main/default/objects/Booking__c/fields/Booking_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Owner_Name__c</fullName>
    <formula>Owner:User.FirstName + &quot; &quot; +  Owner:User.LastName</formula>
    <label>Booking Owner Name</label>
    <type>Text</type>
</CustomField>