dynamix/force-app/main/default/objects/Booking__c/fields/Booking_Plus_7_days__c.field-meta.xml
<CustomField>
    <fullName>Booking_Plus_7_days__c</fullName>
    <formula>DATEVALUE( CreatedDate ) + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Plus 7 days</label>
    <type>Date</type>
</CustomField>