dynamix/force-app/main/default/objects/Booking__c/fields/Brokerage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Amount__c</fullName>
    <formula>(Agreement_Value__c *   Brokerage_Percentage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>