dynamix/force-app/main/default/objects/Booking__c/fields/Brokerage_Amount_Paid2__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Amount_Paid2__c</fullName>
    <label>Brokerage Amount Paid</label>
    <summarizedField>Broker_Payment__c.Amount__c</summarizedField>
    <summaryForeignKey>Broker_Payment__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>