dynamix/force-app/main/default/objects/Booking__c/fields/Brokerage_Amount_paid__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Amount_paid__c</fullName>
    <label>Brokerage Amount paid</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Payment_Category__c</field>
        <operation>equals</operation>
        <value>Brokerage Charges</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>