dynamix/force-app/main/default/objects/Booking__c/fields/Brokerage_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_GST_Amount__c</fullName>
    <formula>IF( Channel_Partner__r.Brokerage_GST_Applicable__c ==true, (Agreement_Value__c *Brokerage_Percentage__c)* 0.18, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>