dynamix/force-app/main/default/objects/Booking__c/fields/Brokerage_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Percentage__c</fullName>
    <label>Brokerage Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>