dynamix/force-app/main/default/objects/Booking__c/fields/Cancel_or_Termination_date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_or_Termination_date__c</fullName>
    <label>Cancel or Termination date</label>
    <type>Date</type>
</CustomField>