dynamix/force-app/main/default/objects/Booking__c/fields/Cancellation_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Checkbox</label>
    <type>Checkbox</type>
</CustomField>