dynamix/force-app/main/default/objects/Booking__c/fields/Cancellation_Computation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Computation__c</fullName>
    <formula>&quot;Miscellaneous Expense:  &quot;&amp; TEXT(Miscellaneous_Expense__c) &amp; &quot;, Forfeiture Amount: &quot;&amp;TEXT(Forfeiture_Amount__c) &amp; &quot;, Brokerage Paid: &quot;&amp;TEXT(Brokerage_Paid__c) &amp; &quot;, Non Recoverable GST: &quot;&amp;TEXT( Non_Recoverable_GST_of_Invoice_Raised__c ) &amp; &quot;, Interest Accrued on Amount Due:  &quot;&amp;TEXT(Interest_Accrued_on_Amount_Due__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Computation</label>
    <type>Text</type>
</CustomField>