dynamix/force-app/main/default/objects/Booking__c/fields/Cancellation_Deed_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Deed_Date__c</fullName>
    <label>Cancellation Deed Date</label>
    <type>Date</type>
</CustomField>