dynamix/force-app/main/default/objects/Booking__c/fields/cancellation_fees__c.field-meta.xml
<CustomField>
    <fullName>cancellation_fees__c</fullName>
    <label>Cancellation Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>