dynamix/force-app/main/default/objects/Booking__c/fields/Cancellation_Initiated_by__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Initiated_by__c</fullName>
    <label>Cancellation Initiated by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Dynamix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>