dynamix/force-app/main/default/objects/Booking__c/fields/Cancellation_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reasons__c</fullName>
    <label>Cancellation Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corona Job Loss</fullName>
            </value>
            <value>
                <fullName>Covid 19</fullName>
            </value>
            <value>
                <fullName>Data Entry Error</fullName>
            </value>
            <value>
                <fullName>Financial Loss</fullName>
            </value>
            <value>
                <fullName>Flat Upgrade</fullName>
            </value>
            <value>
                <fullName>Flat Upgrade Post Regiseration</fullName>
            </value>
            <value>
                <fullName>Flat Downgrade</fullName>
            </value>
            <value>
                <fullName>Loan Eligibility Issue</fullName>
            </value>
            <value>
                <fullName>Medical Emergency</fullName>
            </value>
            <value>
                <fullName>Project Location</fullName>
            </value>
            <value>
                <fullName>Personal Issue</fullName>
            </value>
            <value>
                <fullName>Purchased Property Elsewhere</fullName>
            </value>
            <value>
                <fullName>Ready Possession</fullName>
            </value>
            <value>
                <fullName>Bank Information Misguiding</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Job Transfer</fullName>
            </value>
            <value>
                <fullName>Flat Transfer Before Login</fullName>
            </value>
            <value>
                <fullName>Sale of Flat</fullName>
            </value>
            <value>
                <fullName>Dummy Entry</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Unit Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>