dynamix/force-app/main/default/objects/Booking__c/fields/Cancellation_Request_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Request_Confirmation_Date__c</fullName>
    <label>Cancellation Request Confirmation Date</label>
    <type>Date</type>
</CustomField>