dynamix/force-app/main/default/objects/Booking__c/fields/Cancellation_Request_Date_Retained_Dat__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Request_Date_Retained_Dat__c</fullName>
    <label>Cancellation Request Date / Retained Dat</label>
    <type>Date</type>
</CustomField>