dynamix/force-app/main/default/objects/Booking__c/fields/Cancellation_Requested_Status__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Requested_Status__c</fullName>
    <label>Cancellation Requested Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation Sought</fullName>
            </value>
            <value>
                <fullName>Cancellation Confirmed</fullName>
            </value>
            <value>
                <fullName>Retained</fullName>
            </value>
            <value>
                <fullName>Unit Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>