dynamix/force-app/main/default/objects/Booking__c/fields/Cancellation_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Sub_Reason__c</fullName>
    <label>Cancellation Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job Loss</fullName>
            </value>
            <value>
                <fullName>Financial Loss</fullName>
            </value>
            <value>
                <fullName>Job Transfer</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>COVID Job Loss</fullName>
            </value>
            <value>
                <fullName>Non Payment</fullName>
            </value>
            <value>
                <fullName>Unit Transfer</fullName>
            </value>
            <value>
                <fullName>Job Less</fullName>
                <isActive>false</isActive>
                <label>Job Less</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>