dynamix/force-app/main/default/objects/Booking__c/fields/Car_Parking_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking_Number_2__c</fullName>
    <label>Car Parking Number 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>