dynamix/force-app/main/default/objects/Booking__c/fields/Carpet_Area_Non_Critical__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_Non_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carpet Area (Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>