dynamix/force-app/main/default/objects/Booking__c/fields/Cheque_Bounced_Charges__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Bounced_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cheque Bounced Charges(Including GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>