dynamix/force-app/main/default/objects/Booking__c/fields/Close_Draft_Agreement_Task__c.field-meta.xml
<CustomField>
    <fullName>Close_Draft_Agreement_Task__c</fullName>
    <label>Close Draft Agreement Task</label>
    <type>DateTime</type>
</CustomField>