dynamix/force-app/main/default/objects/Booking__c/fields/Confirmation_Deed_Agreement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Deed_Agreement_Amount__c</fullName>
    <label>Confirmation Deed - Agreement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>