dynamix/force-app/main/default/objects/Booking__c/fields/Confirmation_Deed_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Deed_Agreement_Date__c</fullName>
    <label>Confirmation Deed - Agreement Date</label>
    <type>Date</type>
</CustomField>