dynamix/force-app/main/default/objects/Booking__c/fields/Confirmation_Deed_Notes__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Deed_Notes__c</fullName>
    <label>Confirmation Deed - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>