dynamix/force-app/main/default/objects/Booking__c/fields/Credit_Note_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Amount__c</fullName>
    <label>Credit Note Amount</label>
    <summarizedField>Credit_Note__c.Credit_Note_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Credit_Note__c.Credit_Note_Status__c</field>
        <operation>equals</operation>
        <value>Created</value>
    </summaryFilterItems>
    <summaryForeignKey>Credit_Note__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>