dynamix/force-app/main/default/objects/Booking__c/fields/CRM_Head__c.field-meta.xml
<CustomField>
    <fullName>CRM_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRM Head Backend Field.</description>
    <label>CRM Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking2</relationshipName>
    <type>Lookup</type>
</CustomField>