dynamix/force-app/main/default/objects/Booking__c/fields/Customer_Checklist_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Checklist_Status__c</fullName>
    <label>Customer Checklist Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Accepted with Non-Critical</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>