dynamix/force-app/main/default/objects/Booking__c/fields/Customer_Checklist_Status_Backend__c.field-meta.xml
<CustomField>
    <fullName>Customer_Checklist_Status_Backend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Checklist Status Backend</label>
    <type>Checkbox</type>
</CustomField>