dynamix/force-app/main/default/objects/Booking__c/fields/Customer_KIT_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_KIT_Handover_Date__c</fullName>
    <label>Customer KIT Handover Date</label>
    <type>Date</type>
</CustomField>