dynamix/force-app/main/default/objects/Booking__c/fields/Customer_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mobile_No__c</fullName>
    <formula>Primary_Applicant__r.PersonMobilePhone</formula>
    <label>Customer Mobile No</label>
    <type>Text</type>
</CustomField>