dynamix/force-app/main/default/objects/Booking__c/fields/Customer_Unit_Inspection_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unit_Inspection_Scheduled_Date__c</fullName>
    <label>Customer Unit Inspection Scheduled Date</label>
    <type>Date</type>
</CustomField>