dynamix/force-app/main/default/objects/Booking__c/fields/Date_Field_For_Process_builder__c.field-meta.xml
<CustomField>
    <fullName>Date_Field_For_Process_builder__c</fullName>
    <formula>CreatedDate  + 0.000011</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Field For Process builder</label>
    <type>DateTime</type>
</CustomField>