dynamix/force-app/main/default/objects/Booking__c/fields/Date_of_Agreement_Handover__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Agreement_Handover__c</fullName>
    <label>Date of Agreement Handover</label>
    <type>Date</type>
</CustomField>