dynamix/force-app/main/default/objects/Booking__c/fields/Date_of_First_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Disbursement__c</fullName>
    <label>Date of First Disbursement</label>
    <type>Date</type>
</CustomField>