dynamix/force-app/main/default/objects/Booking__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Description(Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>