dynamix/force-app/main/default/objects/Booking__c/fields/Disable_All_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Reminders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable All Reminders</label>
    <type>Checkbox</type>
</CustomField>