dynamix/force-app/main/default/objects/Booking__c/fields/Discount_Details__c.field-meta.xml
<CustomField>
    <fullName>Discount_Details__c</fullName>
    <label>Discount Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>