dynamix/force-app/main/default/objects/Booking__c/fields/Documents_Handed_Over_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Documents_Handed_Over_to_Customer__c</fullName>
    <label>Documents Handed Over to Customer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original Registered Agreement</fullName>
            </value>
            <value>
                <fullName>Architect Certificate</fullName>
            </value>
            <value>
                <fullName>Demand Letter</fullName>
            </value>
            <value>
                <fullName>Bank NOC/ Builder NOC</fullName>
            </value>
            <value>
                <fullName>Allotment Letter</fullName>
            </value>
            <value>
                <fullName>Original Payment Receipts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>