dynamix/force-app/main/default/objects/Booking__c/fields/Electric_meter_Transfer_Centificate_Hand__c.field-meta.xml
<CustomField>
    <fullName>Electric_meter_Transfer_Centificate_Hand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electric meter Transfer Centificate Hand</label>
    <type>Checkbox</type>
</CustomField>