dynamix/force-app/main/default/objects/Booking__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <formula>&apos;Welcome to &apos;&amp; Project_Name__r.Name &amp;&quot; &quot;&amp; Project_Name__r.Location__c &amp; &apos; finest development! Introducing you to your Relationship Manager.&apos;</formula>
    <label>Email Subject</label>
    <type>Text</type>
</CustomField>