dynamix/force-app/main/default/objects/Booking__c/fields/Enquiry_Source_1__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Source_1__c</fullName>
    <formula>TEXT(Related_Opportunity__r.LeadSource )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiry Source 1</label>
    <type>Text</type>
</CustomField>