dynamix/force-app/main/default/objects/Booking__c/fields/EOI_CA_Booking__c.field-meta.xml
<CustomField>
    <fullName>EOI_CA_Booking__c</fullName>
    <formula>Text( Related_Opportunity__r.EOI_CA__c )</formula>
    <label>EOI/CA Booking</label>
    <type>Text</type>
</CustomField>