dynamix/force-app/main/default/objects/Booking__c/fields/Expected_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Handover_Date__c</fullName>
    <label>Expected Handover Date</label>
    <type>Date</type>
</CustomField>